* 2013-11-28 - marcus.klein@open-xchange.com

 - Fix for bug 30051: Added missing build step for de_CH l10n package to install the PO file during package build.

* 2013-11-28 - thorben.betten@open-xchange.com

 - Fix for bug 30065: Changed misleading wording on no-op login request

* 2013-11-27 - jan.bauerdick@open-xchange.com

 - Fix for bug 29982: Correct handling of URLs as database hostnames

* 2013-11-27 - tobias.friedrich@open-xchange.com

 - Fix for bug 29853: Check for duplicate folder name during insert/update
 - Fix for bug 30049: Added missing import to javax.management
  
* 2013-11-26 - marcus.klein@open-xchange.com

 - Fix for bug 29734: Marked paths.perfMap not as configuration file anymore.
 - Fix for bug 29981: Be resilient against concurrent reads and modifications.

* 2013-11-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 30003: Introduced 'pushToken' parameter for drive requests to associate the registration token in generated events 
 - Fix for bug 29949: Extend the sizes of the 'fname' column in the 'oxfolder_tree' and the 'name' column in the 'virtualTree' table 

* 2013-11-26 - thorben.betten@open-xchange.com

 - Fix for bug 29914: Cleansed all duplicate log4j occurrences from runtime system
 - Fix for bug 30027: Trim date values prior to passing to iCal parser
 - Fix for bug 30029: Avoid unexpected semicolon on color-quoting for plain text

* 2013-11-25 - steffen.templin@open-xchange.com

 - Fix for Bug 29967: Use proper credentials when accessing an external transport account

* 2013-11-24 - thorben.betten@open-xchange.com

 - Fix for bug 29823: Delegate acquiring stream from part to thread pool if possible
 - Fix for bug 29846: Enforce serial execution of modifying actions related to database entities/modules

* 2013-11-22 - thorben.betten@open-xchange.com

 - Fix for bug 29854: orderly signal OAuth provider error to client
 - Fix for bug 29860: Tolerate non-deletable file from file storage on user delete attempt