@@ -1,5 +1,6 @@
 * 2013-11-28 - marcus.klein@open-xchange.com
 
+ - Fix for bug 30063: Do no try to roll back to the save point if MySQL did already a complete transaction rollback.
  - Fix for bug 30051: Added missing build step for de_CH l10n package to install the PO file during package build.
 
 * 2013-11-28 - thorben.betten@open-xchange.com
